[backend] Add thing notification models, repository
